# codeLab

./: LICENSE  README.md
TDD/: bankAccountProgram.py  mainProgram.py  mainProgramTest.py  unitTest_bankAccountProgram.py  unitTest_mainProgram.py
bash/: Learning_command.sh  links.txt  test_01.sh
cpp/: working_lab.cpp
cpp/AdvancedProgrammingCourse/: .project
cpp/CppEssentialProject/: .cproject  .project
cpp/Working_CET/: .cproject  .project
cpp/betterUnderstandingPointers/: betterUnderstandingPointers.sln
flask/: hello.py
maya_api/: needed_configs.txt
maya_api/BlendMeshDeformer/: BlendMeshDeformer.sln
maya_api/attributes/: attributes.cpp
maya_api/build_project_with_CMake/: build_project_with_cmake.txt
maya_api/build_project_with_CMake/sampleProject/src/: CMakeLists.txt  helloWorldCmd.cpp
maya_api/bulgeMeshDeformer/: bulgeMeshDeformer.sln
maya_python_api/: AEgaussianNodeTemplate.mel  commandExample.py  commandPluginWithArgs.py  firstCommand.py  firstNodePlugin.py  sampleCameraCommand.py
nuke_sdk/CompoTool/: menu.py
pyside/: currency.py  find_main_window_for_app.py  first_Pyside.py  inside_outside_host_gui_with_contextmanager.py  interest.py  main_qml.py  marcus_sample_pyside_gui.py  maya_CrashFixWithPySide.py  maya_PySideTemplate.py  maya_renderProgressBar.py  popup_alert.py  simpleCalculator.py  test_eventFilter_01.py  test_event_handler.py  test_events_01.py  test_marcus_hierarchical.py  test_marcus_hierarchical_style.css  test_marcus_minimal.py  test_marcus_withqevent.py
python/: Built-in_Functions.py  benchmark.py  length.py  marcus_command_project.py  mayaGeom.py  mayaSphere1.py  mayaSphere2.py  mayaSphere3.py  mayaSphere4.py  module_math.py  modules_os.py  modules_platform.py  modules_sys.py  ordereddict.py  simple_statements.py  sys_testing.py  test1.py  test_codes_02212015.py  test_inheritance.py  test_oop_01.py  test_oop_02.py  test_oop_03.py  test_oop_04.py  test_oop_05.py
qml/: 1d4817ca-551b-4b26-bb02-887ea737d5f9.dmp  23580806-4e37-4912-b84a-b4a0fc7df55c.dmp  Charts.qml  Rect.qml  Statistics.qml  Timeline.qml  Timeline2.qml  Timeline3.qml  Tooltip.qml  TooltipArea.qml  e1982f14-9669-4c6e-b423-63f9fa9251e9.dmp  main.qml  main2.qml  run1.py  run2.py  run3.py  testPy.py  test_canvas_01.qml  testing.qml  timeline_launcher.py  using_tooltip.qml
realflow_plugins/: needed_config.txt
(+943 files in other folders)
